removed Activities docs and links

--- a/docs/getting-started/04_changelog/92_3-10/3-10.md
+++ b/docs/getting-started/04_changelog/92_3-10/3-10.md
@@ -6,7 +6,7 @@
 
 #### Context Merging
 
-Changed the mechanism of merging context data objects (used in [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/overview/index.html), [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/overview/index.html), [Activities](../../../glue42-concepts/data-sharing-between-apps/activities/overview/index.html)). When updating a context object, the new and the old values of its first level properties (e.g., the value of `a` in `{ a: { b: 0 } }`) are no longer merged, but the new value replaces the old value. For further clarification, see the examples below:
+Changed the mechanism of merging context data objects (used in [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/overview/index.html), [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/overview/index.html)). When updating a context object, the new and the old values of its first level properties (e.g., the value of `a` in `{ a: { b: 0 } }`) are no longer merged, but the new value replaces the old value. For further clarification, see the examples below:
 
 ```javascript
 // Creating a context object.
