--- a/docs/getting-started/04_changelog/99_3-3/3-3.md
+++ b/docs/getting-started/04_changelog/99_3-3/3-3.md
@@ -4,7 +4,7 @@
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- Added config for [Activities](../../../glue42-concepts/data-sharing-between-apps/activities/overview/index.html) colors.
+- Added config for Activities colors.
 - Added application names to the application window list in the tray.
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes"> 
