--- a/docs/getting-started/04_changelog/95_3-7/3-7.md
+++ b/docs/getting-started/04_changelog/95_3-7/3-7.md
@@ -4,7 +4,7 @@
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- Extended the `focusWindow()` method in the Swimlane API to work in the context of [Activities](../../../glue42-concepts/data-sharing-between-apps/activities/overview/index.html).
+- Extended the `focusWindow()` method in the Swimlane API to work in the context of Activities.
 - Added new configurable workspace options in the [`system.json`](../../../assets/configuration/system.json) file under `swimlane/workspace` - `allowDrop`, `allowExtract`, `actionButtonTooltip`, `addButtonTooltip`.
 - Added Swimlane API loading strategies for apps in workspaces.
 - Extracted the [splash screen](../../../glue42-concepts/glue42-platform-features/index.html#splash_screen) as a separate app, so that it can be replaced.
