Fixed links, added new content, minor edits. (#10)

--- a/docs/getting-started/04_changelog/90_3-12/3-12.md
+++ b/docs/getting-started/04_changelog/90_3-12/3-12.md
@@ -32,8 +32,8 @@ glue42://workspace/StartOfDay
 - Experimental support for [Citrix Virtual Apps](../../../glue42-concepts/glue42-platform-features/index.html#citrix_applications). Citrix applications can participate in the Glue42 environment as first-class citizens and use all Glue42 functionalities like Interop, Channels, etc. For more details, see also how to [configure a Citrix app](../../../developers/configuration/application/index.html#application_configuration-citrix_app) and [modify the system-wide Citrix configuration](../../../developers/configuration/system/index.html#citrix_apps).
 
 - Workspaces extensions:
-    - [Hibernation](../../../glue42-concepts/windows/workspaces/overview/index.html#hibernation) - hibernate and resume Workspaces based on configurable rules to save system resources and improve performance;
-    - [Loading Strategies](../../../glue42-concepts/windows/workspaces/overview/index.html#loading_strategies) - load apps in Workspaces using different strategies to improve performance and UX; 
+    - [Hibernation](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-workspaces_app_configuration-hibernation) - hibernate and resume Workspaces based on configurable rules to save system resources and improve performance;
+    - [Loading Strategies](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-workspaces_app_configuration-loading_strategies) - load apps in Workspaces using different strategies to improve performance and UX; 
     - [Lockdown](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-lockdown) - prevent the users from modifying a Workspace or some of its elements;
     - [Size Constraints](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-size_constraints) - set constraints for Workspace elements and create pinned elements - elements that will preserve their width (columns) or height (rows) when the user resizes the Workspace;
 
