--- a/docs/getting-started/04_changelog/95_3-7/3-7.md
+++ b/docs/getting-started/04_changelog/95_3-7/3-7.md
@@ -9,7 +9,7 @@
 - Added Swimlane API loading strategies for apps in workspaces.
 - Extracted the [splash screen](../../../glue42-concepts/glue42-platform-features/index.html#splash_screen) as a separate app, so that it can be replaced.
 - Implemented download bars for [downloading files](../../../glue42-concepts/glue42-platform-features/index.html#downloading_files) in Glue42 Enterprise.
-- Added support for [extensions in web apps](../../../glue42-concepts/glue42-platform-features/index.html#adding_extensions_to_web_apps) hosted in Glue42 Enterprise. Also added an [extension template](https://github.com/Tick42/glue42-extension-template) example.
+- Added support for extensions in web apps hosted in Glue42 Enterprise.
 - Added a [REST store](../../../glue42-concepts/windows/layouts/overview/index.html#layout_stores) for layout configurations.
 - Reintroduced the `ignoreSaveOnClose` application configuration property. (See the [application configuration schema](../../../assets/configuration/application.json))
 - Published the Glue42 JavaScript library as `npm` packages - [@glue42/core](https://www.npmjs.com/package/@glue42/core) and [@glue42/desktop](https://npmjs.com/package/@glue42/desktop)
