Updated JSON schemas; minor edits

--- a/docs/getting-started/04_changelog/88_3-13/3-13.md
+++ b/docs/getting-started/04_changelog/88_3-13/3-13.md
@@ -15,6 +15,8 @@ const { ipcRenderer } = require("electron");
 
 - Workspace containers ([`Box`](../../../reference/glue/latest/workspaces/index.html#Box), [`Column`](../../../reference/glue/latest/workspaces/index.html#Column), [`Row`](../../../reference/glue/latest/workspaces/index.html#Row), [`Group`](../../../reference/glue/latest/workspaces/index.html#Group), [`WorkspaceWindow`](../../../reference/glue/latest/workspaces/index.html#WorkspaceWindow)) can now be [maximized and restored](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-manipulating_workspace_elements-maximize_and_restore) programmatically within the bounds of the Workspace through the `maximize()` and `restore()` methods of their instances.
 
+- Added a `<MoveArea />` component to the [`@glue42/workspaces-ui-react`](https://www.npmjs.com/package/@glue42/workspaces-ui-react) library that can be used to relocate the Workspaces App [move area](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-header_area_components-move_area).
+
 - [Preload scripts](../../../glue42-concepts/glue42-platform-features/index.html#preload_scripts) can now be specified through the [application configuration](../../../developers/configuration/application/index.html) file. The preload scripts will be executed before the actual web app is loaded. Use the `"preloadScripts"` array of the `"details"` top-level key in the application configuration file, provide URLs to the scripts, and they will be executed in the specified order:
 
 ```json
