--- a/docs/getting-started/04_changelog/93_3-9/3-9.md
+++ b/docs/getting-started/04_changelog/93_3-9/3-9.md
@@ -11,7 +11,7 @@
 - JavaScript [Displays API](../../../glue42-concepts/glue42-platform-features/index.html#displays) added.
 - Logging to files from JavaScript apps through the [Logger API](../../../glue42-concepts/glue42-platform-features/index.html#logging) added.
 - Support for [FDC3 Standards](../../fdc3-compliance/index.html) added.
-- Support for [Flash Plugins](../../../glue42-concepts/glue42-platform-features/index.html#flash_plugin) added.
+- Support for Flash Plugins added.
 - A [default global layout](../../../glue42-concepts/windows/layouts/overview/index.html#default_global_layout) added.
 - Option to prevent [page refresh](../../../glue42-concepts/windows/window-management/javascript/index.html#window_events-close_and_refresh-preventing_page_refresh) added.
 
