updated FDC3 links, added FDC3-related clarifications

--- a/docs/getting-started/04_changelog/94_3-8/3-8.md
+++ b/docs/getting-started/04_changelog/94_3-8/3-8.md
@@ -22,7 +22,7 @@
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
-- [Application store from REST service](../../../glue42-concepts/application-management/overview/index.html#application_stores-rest_service_app_stores) - connection improvements.
+- [Application store from a REST service](../../../glue42-concepts/application-management/overview/index.html#application_stores-remote_app_stores) - connection improvements.
 - Improvements in handling windows proportions in maximized groups.
 - Improvements in layout save and restore.
 - Fixed WMI spawning multiple processes.
