Removed Extending Configurations

--- a/docs/getting-started/04_changelog/92_3-10/3-10.md
+++ b/docs/getting-started/04_changelog/92_3-10/3-10.md
@@ -76,7 +76,7 @@ glue.layouts.onSaveRequested((requestInfo) => {
 - Applications can now [store custom data](../../../glue42-concepts/windows/layouts/javascript/index.html#saving_and_updating_context) in the [Application Default layout](../../../glue42-concepts/windows/layouts/overview/index.html).
 - The [title format](../../../developers/configuration/system/index.html#application_settings) of Glue42 Windows can now be set through system configuration.
 - Applications can now be [grouped in folders and subfolders](../../../developers/configuration/application/index.html#grouping_applications) in the Application Manager of the Glue42 Toolbar.
-- The [**Glue42 Enterprise**](https://glue42.com/enterprise/) system configuration can now be [extended with custom configuration](../../../developers/configuration/overview/index.html#extending_configurations) from a REST service.
+- The [**Glue42 Enterprise**](https://glue42.com/enterprise/) system configuration can now be extended with custom configuration from a REST service.
 - The native browser `window.open()` call can now open browser windows or Glue42 Windows, or can be entirely disabled based on [system configuration](../../../glue42-concepts/windows/window-management/javascript/index.html#opening_windows-handling_the_browser_windowopen).
 - Added event listener for [Application Shutdown](../../how-to/glue42-enable-your-app/java/index.html#referencing_and_initialization-application_shutdown) to the Java API.
 - VBA documentation added - [Glue42 Enable Your App](../../how-to/glue42-enable-your-app/vba/index.html), [Interop](../../../glue42-concepts/data-sharing-between-apps/interop/vba/index.html), [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/vba/index.html), [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/vba/index.html), [Window Management](../../../glue42-concepts/windows/window-management/vba/index.html), [VBA Reference](../../how-to/glue42-enable-your-app/vba/index.html#comvba_reference).
