--- a/docs/getting-started/04_changelog/91_3-11/3-11.md
+++ b/docs/getting-started/04_changelog/91_3-11/3-11.md
@@ -6,7 +6,7 @@
 
 #### Opening and Saving Layouts from Earlier Glue42 Versions
 
-[Layouts](../../../glue42-concepts/windows/layouts/overview/index.html) created with Glue42 3.10 or earlier *can* be opened in Glue42 3.11, however, **once saved in Glue42 3.11, they cannot be opened in Glue42 3.10 or earlier.** It is strongly recommended that you don't point Glue42 3.10 or earlier and Glue42 3.11 to the same Layout stores.
+[Layouts](../../../glue42-concepts/windows/layouts/overview/index.html) created with Glue42 3.10 or earlier *can* be opened in Glue42 3.11, however, **once saved in Glue42 3.11, they can't be opened in Glue42 3.10 or earlier.** It is strongly recommended that you don't point Glue42 3.10 or earlier and Glue42 3.11 to the same Layout stores.
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
