Added .NET Bootstrapped Apps and .NET Frame Buttons sections.

--- a/docs/getting-started/04_changelog/87_3-13-1/3-13-1.md
+++ b/docs/getting-started/04_changelog/87_3-13-1/3-13-1.md
@@ -98,7 +98,7 @@ tick42-glue-desktop.exe -- config=config/system.json configOverrides config0=con
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- .NET support for applications started by a bootstrapping launcher application.
+- .NET support for applications [started by a bootstrapping launcher application](../../../glue42-concepts/application-management/net/index.html#bootstrapped_applications).
 
 - Added documentation for [debugging applications](../../../developers/debugging-your-app/index.html) running in [**Glue42 Enterprise**](https://glue42.com/enterprise/).
 
