Removed Process Reuse

--- a/docs/getting-started/04_changelog/93_3-9/3-9.md
+++ b/docs/getting-started/04_changelog/93_3-9/3-9.md
@@ -20,7 +20,7 @@
 - [**Glue42 Enterprise**](https://glue42.com/enterprise/) upgraded with Electron 7.
 - Added the version of the Glue42 JavaScript library to the [Applications View](../../how-to/use-glue42/index.html#applications_view).
 - You can now register [asynchronous Interop methods](../../../glue42-concepts/data-sharing-between-apps/interop/javascript/index.html#method_registration-asynchronous_results) directly with the [`glue.interop.register()`](../../../reference/glue/latest/interop/index.html#API-register) method.
-- Improvements related to [Process Reuse](../../../glue42-concepts/glue42-platform-features/index.html#process_reuse).
+- Improvements related to Process Reuse.
 - Improvements related to the arguments passed to the [`glue.windows.open()`](../../../reference/glue/latest/windows/index.html#API-open) method.
 - Fixes related to better handling of apps after resuming the OS from sleep.
 
