--- a/docs/getting-started/04_changelog/87_3-13-1/3-13-1.md
+++ b/docs/getting-started/04_changelog/87_3-13-1/3-13-1.md
@@ -6,7 +6,7 @@
 
 When overriding Glue42 [configurations](../../../developers/configuration/overview/index.html) (e.g., running [**Glue42 Enterprise**](https://glue42.com/enterprise/) in different environments/regions, the values of the settings which accept an array are now replaced instead of merged.
 
-The following examples demonstrate the new and the old behavior when using the `"appStores"` top-level array. 
+The following examples demonstrate the new and the old behavior when using the `"appStores"` top-level array.
 
 In the `system.json` file `"appStores"` is used to define application stores for a production environemnt. In the `system-DEV.json` file, the same property is used to define an override configuration for the app stores in a development environment:
 
@@ -98,7 +98,7 @@ tick42-glue-desktop.exe -- config=config/system.json configOverrides config0=con
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-- .NET support for applications [started by a bootstrapping launcher application](../../../glue42-concepts/application-management/net/index.html#bootstrapped_applications).
+- .NET support for applications [started by a bootstrapping launcher application](../../../glue42-concepts/application-management/net/index.html#bootstrapped_apps).
 
 - Added documentation for [debugging applications](../../../developers/debugging-your-app/index.html) running in [**Glue42 Enterprise**](https://glue42.com/enterprise/).
 
