Updated diagrams with new design

--- a/docs/getting-started/04_changelog/90_3-12/3-12.md
+++ b/docs/getting-started/04_changelog/90_3-12/3-12.md
@@ -14,7 +14,7 @@
 
 - [Glue42 Server](../../../glue42-concepts/glue42-server/index.html) - a server-side application that provides data to Glue42 (applications, Layouts, application preferences) and allows monitoring and interacting with users running Glue42. It also includes an Admin UI that helps managing the data stored in the Glue42 Server easier.
 
-![Glue42 Server](../../../images/server/server-architecture.png)
+<glue42 name="diagram" image="../../../images/server/server-architecture.png">
 
 - [Global Protocol Handler](../../../glue42-concepts/glue42-platform-features/index.html#global_protocol_handler) - Glue42 will now register itself as the default handler for the `glue42://` protocol, meaning any link that starts with this scheme will be opened in Glue42. This allows users or applications to create links that will execute different Glue42 actions (e.g., starting applications, restoring Layouts, etc.) when clicked. Those links can be shared between users in chat, emails, web pages.
 
@@ -33,7 +33,7 @@ glue42://workspace/StartOfDay
 
 - Workspaces extensions:
     - [Hibernation](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-workspaces_app_configuration-hibernation) - hibernate and resume Workspaces based on configurable rules to save system resources and improve performance;
-    - [Loading Strategies](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-workspaces_app_configuration-loading_strategies) - load apps in Workspaces using different strategies to improve performance and UX; 
+    - [Loading Strategies](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-workspaces_app_configuration-loading_strategies) - load apps in Workspaces using different strategies to improve performance and UX;
     - [Lockdown](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-lockdown) - prevent the users from modifying a Workspace or some of its elements;
     - [Size Constraints](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-size_constraints) - set constraints for Workspace elements and create pinned elements - elements that will preserve their width (columns) or height (rows) when the user resizes the Workspace;
 
