Added a How to Rebrand Glue42 Enterprise section

--- a/docs/getting-started/04_changelog/88_3-13/3-13.md
+++ b/docs/getting-started/04_changelog/88_3-13/3-13.md
@@ -4,7 +4,7 @@
 
 <glue42 name="addClass" class="breakingChanges" element="p" text="Breaking Changes">
 
-- Due to updating [**Glue42 Enterprise**](https://glue42.com/enterprise/) to Electron 13 and Chromium 91, and increasing product security, clients which have implemented custom [splash screens](../../../glue42-concepts/glue42-platform-features/index.html#splash_screen) or custom loaders must edit the splash/loader code as shown in the following example, in order for the custom splash screens and custom loaders to continue working properly:
+- Due to updating [**Glue42 Enterprise**](https://glue42.com/enterprise/) to Electron 13 and Chromium 91, and increasing product security, clients which have implemented custom [splash screens](../../how-to/rebrand-glue42/user-interface/index.html#splash_screen) or custom [loaders](../../how-to/rebrand-glue42/user-interface/index.html#loaders) must edit the splash/loader code as shown in the following example, in order for the custom splash screens and custom loaders to continue working properly:
 
 ```javascript
 // Delete this constant declaration from the splash/loader code.
