--- a/docs/getting-started/04_changelog/93_3-9/3-9.md
+++ b/docs/getting-started/04_changelog/93_3-9/3-9.md
@@ -18,7 +18,7 @@
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
 - [**Glue42 Enterprise**](https://glue42.com/enterprise/) upgraded with Electron 7.
-- Added the version of the Glue42 JavaScript library to the [Applications View](../../how-to/use-glue42/index.html#applications_view).
+- Added the version of the Glue42 JavaScript library to the [Applications View](../../general-overview/index.html#using_glue42_enterprise-applications_view).
 - You can now register [asynchronous Interop methods](../../../glue42-concepts/data-sharing-between-apps/interop/javascript/index.html#method_registration-asynchronous_results) directly with the [`glue.interop.register()`](../../../reference/glue/latest/interop/index.html#API-register) method.
 - Improvements related to Process Reuse.
 - Improvements related to the arguments passed to the [`glue.windows.open()`](../../../reference/glue/latest/windows/index.html#API-open) method.
