--- a/docs/getting-started/04_changelog/94_3-8/3-8.md
+++ b/docs/getting-started/04_changelog/94_3-8/3-8.md
@@ -10,10 +10,10 @@
 - Added a JavaScript [Popup API](../../../glue42-concepts/windows/window-management/javascript/index.html#popup_windows).
 - Added a JavaScript [Flydown API](../../../glue42-concepts/windows/window-management/javascript/index.html#flydown_windows).
 - For `Node.js` scripts started from [**Glue42 Enterprise**](https://glue42.com/enterprise/), the Glue42 library can now be [initialized without passing a configuration object](../../how-to/glue42-enable-your-app/nodejs/index.html).
-- Added support for Windows [authentication](../../what-is-glue42/security/index.html) in [**Glue42 Enterprise**](https://glue42.com/enterprise/).
+- Added support for Windows authentication in [**Glue42 Enterprise**](https://glue42.com/enterprise/).
 - You can now move the installation folder of [**Glue42 Enterprise**](https://glue42.com/enterprise/) to another location and run [**Glue42 Enterprise**](https://glue42.com/enterprise/) from wherever you like.
 - Added [zooming](../../../glue42-concepts/glue42-platform-features/index.html#zooming) support.
-- [.NET Window Management API](../../../glue42-concepts/windows/window-management/net/index.html) breaking changes - [Glue42 window settings](../../../developers/configuration/glue42-windows/index.html) and [Themes settings](../../../developers/configuration/themes/index.html) now available as JSON configuration files. 
+- [.NET Window Management API](../../../glue42-concepts/windows/window-management/net/index.html) breaking changes - [Glue42 window settings](../../../developers/configuration/glue42-windows/index.html) and [Themes settings](../../../developers/configuration/themes/index.html) now available as JSON configuration files.
 - [.NET Layouts API](../../../glue42-concepts/windows/layouts/net/index.html) added.
 - [ClickOnce application support](../../how-to/glue42-enable-your-app/net/index.html#glue42_clickonce) added.
 - New [property for resizing window groups](../../../developers/configuration/glue42-windows/index.html#glue42_window_properties) added - `sizingMode: "Proportional" | "Single"`.
@@ -26,4 +26,4 @@
 - Improvements in handling windows proportions in maximized groups.
 - Improvements in layout save and restore.
 - Fixed WMI spawning multiple processes.
-- Fixed splash screen not disappearing when invalid configuration is passed on startup. 
+- Fixed splash screen not disappearing when invalid configuration is passed on startup.
