--- a/docs/getting-started/04_changelog/95_3-7/3-7.md
+++ b/docs/getting-started/04_changelog/95_3-7/3-7.md
@@ -14,13 +14,13 @@
 - Reintroduced the `ignoreSaveOnClose` application configuration property. (See the [application configuration schema](../../../assets/configuration/application.json))
 - Published the Glue42 JavaScript library as `npm` packages - [@glue42/core](https://www.npmjs.com/package/@glue42/core) and [@glue42/desktop](https://npmjs.com/package/@glue42/desktop)
 - Exposed an event for closing and refreshing the current window - [Window Management](../../../glue42-concepts/windows/window-management/javascript/index.html#window_events-close_and_refresh).
-- Added ["Applications View"](../../general-overview/index.html#using_glue42_enterprise-applications_view), accessible from the [**Glue42 Enterprise**](https://glue42.com/enterprise/) tray icon.
+- Added [Applications View](../../what-is-glue42/general-overview/index.html#using_glue42_enterprise-applications_view), accessible from the [**Glue42 Enterprise**](https://glue42.com/enterprise/) tray icon.
 - Added Java API support for signatures in method definitions and updating contexts.
 
-<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes"> 
+<glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
 - Fixed not remembering App Manager position after application restart.
 - Fixed `glue.d.ts` file for `channels.subscribe()`.
 - Fixed registered hotkey appearing in the utility list only after refresh of all apps.
-- Fixed application configuration problems with the `caption` and `ignoreSavedLayout` properties. 
-- Improvements related to the Swimlane UI - frame closing, workspace restore, global search, handling active/inactive displays after a restore. 
+- Fixed application configuration problems with the `caption` and `ignoreSavedLayout` properties.
+- Improvements related to the Swimlane UI - frame closing, workspace restore, global search, handling active/inactive displays after a restore.
