--- a/docs/getting-started/04_changelog/95_3-7/3-7.md
+++ b/docs/getting-started/04_changelog/95_3-7/3-7.md
@@ -12,7 +12,7 @@
 - Added support for extensions in web apps hosted in Glue42 Enterprise.
 - Added a [REST store](../../../glue42-concepts/windows/layouts/overview/index.html#layout_stores) for layout configurations.
 - Reintroduced the `ignoreSaveOnClose` application configuration property. (See the [application configuration schema](../../../assets/configuration/application.json))
-- Published the Glue42 JavaScript library as `npm` packages - [@glue42/core](https://www.npmjs.com/package/@glue42/core) and [@glue42/desktop](https://npmjs.com/package/@glue42/desktop)
+- Published the Glue42 JavaScript library as NPM packages - [@glue42/core](https://www.npmjs.com/package/@glue42/core) and [@glue42/desktop](https://npmjs.com/package/@glue42/desktop)
 - Exposed an event for closing and refreshing the current window - [Window Management](../../../glue42-concepts/windows/window-management/javascript/index.html#window_events-close_and_refresh).
 - Added [Applications View](../../what-is-glue42/general-overview/index.html#using_glue42_enterprise-applications_view), accessible from the [**Glue42 Enterprise**](https://glue42.com/enterprise/) tray icon.
 - Added Java API support for signatures in method definitions and updating contexts.
