Updated the Glue42 3.15 changelog

--- a/docs/getting-started/04_changelog/85_3-15/3-15.md
+++ b/docs/getting-started/04_changelog/85_3-15/3-15.md
@@ -77,6 +77,26 @@
 >
 > Added new [Glue42 Window events](../../../glue42-concepts/windows/window-management/java/index.html#window_events) for the Java API. You can now subscribe for changes to the window [title](../../../glue42-concepts/windows/window-management/java/index.html#window_events-title), [bounds](../../../glue42-concepts/windows/window-management/java/index.html#window_events-size__position), [visibility](../../../glue42-concepts/windows/window-management/java/index.html#window_events-visibility) and [focus](../../../glue42-concepts/windows/window-management/java/index.html#window_events-focus).
 
+> ### C Exports Library
+>
+> Added documentation about the Glue42 C Exports library which offers access for native apps to Glue42 functionalities via exported C functions:
+>
+> - [Glue42 Enable Your App](../../how-to/glue42-enable-your-app/c-exports/index.html)
+> - [Application Management](../../../glue42-concepts/application-management/c-exports/index.html)
+> - [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/c-exports/index.html)
+> - [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/c-exports/index.html)
+> - [Interop](../../../glue42-concepts/data-sharing-between-apps/interop/c-exports/index.html)
+> - [Window Management](../../../glue42-concepts/windows/window-management/c-exports/index.html)
+> - [Reference](../../how-to/glue42-enable-your-app/c-exports/index.html#c_exports_reference)
+
+> ### Testing with Playwright
+>
+> Added documentation about [testing with Playwright](../../../developers/testing-your-app/index.html#testing_with_playwright). Playwright allows you to create end-to-end automation tests for [**Glue42 Enterprise**](https://glue42.com/enterprise/) and your Glue42 enabled applications.
+
+> ### Renderer Transparency Mode
+>
+> Added documentation about the settings for the [renderer transparency mode](../../../developers/configuration/glue42-windows/index.html#glue42_window_properties-renderer_transparency_mode). These settings allow you to specify how to handle the transparency of the HTML elements that determine the bounds of app windows in [Glue42 Window groups](../../../glue42-concepts/windows/window-management/overview/index.html#window_groups) and [Workspaces](../../../glue42-concepts/windows/workspaces/overview/index.html).
+
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
 > - Upgraded to Electron 17 (Chromium 98).
